<resources>
    <string name="app_name">갤러리+</string>
    <string name="app_display_name">Gallery+</string>
    <string name="back">뒤로가기</string>
    <string name="sort_latest">최신순</string>
    <string name="sort_oldest">오래된순</string>
    <string name="image_count_format">%1$d장</string>
    <string name="photo_count_format">사진 %1$d장</string>
    <string name="image_counter_format">%1$d / %2$d</string>
    <string name="empty_no_photos_title">표시할 사진이 없습니다</string>
    <string name="empty_no_photos_message">사진이 추가되면 여기에 표시됩니다</string>
    <string name="empty_permission_title">사진 접근 권한이 필요합니다</string>
    <string name="empty_permission_message">권한을 허용하면 갤러리를 볼 수 있습니다</string>
    <string name="permission_required_toast">사진을 불러오기 위해 권한이 필요합니다.</string>
    <string name="gallery_image">갤러리 이미지</string>
    <string name="info_version_format">버전 %1$s</string>
    <string name="unknown_version">알 수 없음</string>
    <string name="info_summary">개인 사진을 날짜별로 정리하고, 앱 잠금과 전체화면 이미지 뷰어를 제공하는 갤러리 앱입니다.</string>
    <string name="info_features_title">주요 기능</string>
    <string name="info_features_body">- 날짜별 사진 그룹\n- 최신순/오래된순 정렬\n- 정사각형 썸네일 그리드\n- 전체화면 이미지 보기\n- 핀치 확대와 더블탭 확대\n- 사진 삭제와 목록 자동 갱신</string>
    <string name="info_security_title">잠금 및 보안</string>
    <string name="info_security_body">- 생체 인증 또는 기기 잠금 인증\n- 백그라운드 전환 후 재잠금\n- 화면 꺼짐 시 즉시 잠금\n- 민감 화면 캡처 방지</string>
    <string name="check_update">업데이트 확인</string>
</resources>
